add integration test using testContainer